--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="calculator">
             
             <div class="calculator-top">
-                <img src="calc-top.jpg" alt="cal-top" width="300">
+                <img src="./assets/calc-top.jpg" alt="cal-top" width="300">
                 <div id="display">0.</div>
                 <div class="gray-line"></div>
             </div>
